[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0"
name = "offbotjava"

requires-python = ">= 3.8"

dependencies = [
  "arrow",
  "requests",
  "colorama >= 0.4.6",
  "click",
  "websockets"
]

authors = [
  {name = "ToboriW"},
]

description = "OnBotJava without OnBotJava"

[project.scripts]
ftcsync = "offbotjava.ftcsync:main"
